// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Align(0,LEFT),Align(1,CENTER),Align(2,RIGHT) DOUBLE [Simple 2x2] 1`] = `
[
  "╔════════════╦════════════╦═════════════╦════════════╗",
  "║  Column 1  ║  Column 2  ║  Column 3A  ║  Column 4  ║",
  "╠════════════╬════════════╬═════════════╬════════════╣",
  "║  Left      ║    Ctr     ║     Ctr     ║     Right  ║",
  "╠════════════╬════════════╬═════════════╬════════════╣",
  "║  Left 1    ║    Ctr2    ║    Ctr3     ║   Right 4  ║",
  "╚════════════╩════════════╩═════════════╩════════════╝",
]
`;

exports[`Align(0,LEFT),Align(1,CENTER),Align(2,RIGHT) HORIZONTAL_DOUBLE_VERTICAL_THIN [Simple 2x2] 1`] = `
[
  "╒════════════╤════════════╤═════════════╤════════════╕",
  "│  Column 1  │  Column 2  │  Column 3A  │  Column 4  │",
  "╞════════════╪════════════╪═════════════╪════════════╡",
  "│  Left      │    Ctr     │     Ctr     │     Right  │",
  "╞════════════╪════════════╪═════════════╪════════════╡",
  "│  Left 1    │    Ctr2    │    Ctr3     │   Right 4  │",
  "╘════════════╧════════════╧═════════════╧════════════╛",
]
`;

exports[`Align(0,LEFT),Align(1,CENTER),Align(2,RIGHT) HORIZONTAL_THICK_VERTICAL_THIN [Simple 2x2] 1`] = `
[
  "┍━━━━━━━━━━━━┯━━━━━━━━━━━━┯━━━━━━━━━━━━━┯━━━━━━━━━━━━┑",
  "│  Column 1  │  Column 2  │  Column 3A  │  Column 4  │",
  "┝━━━━━━━━━━━━┿━━━━━━━━━━━━┿━━━━━━━━━━━━━┿━━━━━━━━━━━━┥",
  "│  Left      │    Ctr     │     Ctr     │     Right  │",
  "┝━━━━━━━━━━━━┿━━━━━━━━━━━━┿━━━━━━━━━━━━━┿━━━━━━━━━━━━┥",
  "│  Left 1    │    Ctr2    │    Ctr3     │   Right 4  │",
  "┕━━━━━━━━━━━━┷━━━━━━━━━━━━┷━━━━━━━━━━━━━┷━━━━━━━━━━━━┙",
]
`;

exports[`Align(0,LEFT),Align(1,CENTER),Align(2,RIGHT) HORIZONTAL_THIN_VERTICAL_DOUBLE [Simple 2x2] 1`] = `
[
  "╓────────────╥────────────╥─────────────╥────────────╖",
  "║  Column 1  ║  Column 2  ║  Column 3A  ║  Column 4  ║",
  "╟────────────╫────────────╫─────────────╫────────────╢",
  "║  Left      ║    Ctr     ║     Ctr     ║     Right  ║",
  "╟────────────╫────────────╫─────────────╫────────────╢",
  "║  Left 1    ║    Ctr2    ║    Ctr3     ║   Right 4  ║",
  "╙────────────╨────────────╨─────────────╨────────────╜",
]
`;

exports[`Align(0,LEFT),Align(1,CENTER),Align(2,RIGHT) HORIZONTAL_THIN_VERTICAL_THICK [Simple 2x2] 1`] = `
[
  "┎────────────┰────────────┰─────────────┰────────────┒",
  "┃  Column 1  ┃  Column 2  ┃  Column 3A  ┃  Column 4  ┃",
  "┠────────────╂────────────╂─────────────╂────────────┨",
  "┃  Left      ┃    Ctr     ┃     Ctr     ┃     Right  ┃",
  "┠────────────╂────────────╂─────────────╂────────────┨",
  "┃  Left 1    ┃    Ctr2    ┃    Ctr3     ┃   Right 4  ┃",
  "┖────────────┸────────────┸─────────────┸────────────┚",
]
`;

exports[`Align(0,LEFT),Align(1,CENTER),Align(2,RIGHT) INNER_DOUBLE_OUTER_THIN [Simple 2x2] 1`] = `
[
  "┌────────────╥────────────╥─────────────╥────────────┐",
  "│  Column 1  ║  Column 2  ║  Column 3A  ║  Column 4  │",
  "╞════════════╬════════════╬═════════════╬════════════╡",
  "│  Left      ║    Ctr     ║     Ctr     ║     Right  │",
  "╞════════════╬════════════╬═════════════╬════════════╡",
  "│  Left 1    ║    Ctr2    ║    Ctr3     ║   Right 4  │",
  "└────────────╨────────────╨─────────────╨────────────┘",
]
`;

exports[`Align(0,LEFT),Align(1,CENTER),Align(2,RIGHT) INNER_DOUBLE_OUTER_THIN_CURVE [Simple 2x2] 1`] = `
[
  "╭────────────╥────────────╥─────────────╥────────────╮",
  "│  Column 1  ║  Column 2  ║  Column 3A  ║  Column 4  │",
  "╞════════════╬════════════╬═════════════╬════════════╡",
  "│  Left      ║    Ctr     ║     Ctr     ║     Right  │",
  "╞════════════╬════════════╬═════════════╬════════════╡",
  "│  Left 1    ║    Ctr2    ║    Ctr3     ║   Right 4  │",
  "╰────────────╨────────────╨─────────────╨────────────╯",
]
`;

exports[`Align(0,LEFT),Align(1,CENTER),Align(2,RIGHT) INNER_THICK_OUTER_THIN [Simple 2x2] 1`] = `
[
  "┌────────────┰────────────┰─────────────┰────────────┐",
  "│  Column 1  ┃  Column 2  ┃  Column 3A  ┃  Column 4  │",
  "┝━━━━━━━━━━━━╋━━━━━━━━━━━━╋━━━━━━━━━━━━━╋━━━━━━━━━━━━┥",
  "│  Left      ┃    Ctr     ┃     Ctr     ┃     Right  │",
  "┝━━━━━━━━━━━━╋━━━━━━━━━━━━╋━━━━━━━━━━━━━╋━━━━━━━━━━━━┥",
  "│  Left 1    ┃    Ctr2    ┃    Ctr3     ┃   Right 4  │",
  "└────────────┸────────────┸─────────────┸────────────┘",
]
`;

exports[`Align(0,LEFT),Align(1,CENTER),Align(2,RIGHT) INNER_THICK_OUTER_THIN_CURVE [Simple 2x2] 1`] = `
[
  "╭────────────┰────────────┰─────────────┰────────────╮",
  "│  Column 1  ┃  Column 2  ┃  Column 3A  ┃  Column 4  │",
  "┝━━━━━━━━━━━━╋━━━━━━━━━━━━╋━━━━━━━━━━━━━╋━━━━━━━━━━━━┥",
  "│  Left      ┃    Ctr     ┃     Ctr     ┃     Right  │",
  "┝━━━━━━━━━━━━╋━━━━━━━━━━━━╋━━━━━━━━━━━━━╋━━━━━━━━━━━━┥",
  "│  Left 1    ┃    Ctr2    ┃    Ctr3     ┃   Right 4  │",
  "╰────────────┸────────────┸─────────────┸────────────╯",
]
`;

exports[`Align(0,LEFT),Align(1,CENTER),Align(2,RIGHT) INNER_THIN_OUTER_DOUBLE [Simple 2x2] 1`] = `
[
  "╔════════════╤════════════╤═════════════╤════════════╗",
  "║  Column 1  │  Column 2  │  Column 3A  │  Column 4  ║",
  "╟────────────┼────────────┼─────────────┼────────────╢",
  "║  Left      │    Ctr     │     Ctr     │     Right  ║",
  "╟────────────┼────────────┼─────────────┼────────────╢",
  "║  Left 1    │    Ctr2    │    Ctr3     │   Right 4  ║",
  "╚════════════╧════════════╧═════════════╧════════════╝",
]
`;

exports[`Align(0,LEFT),Align(1,CENTER),Align(2,RIGHT) INNER_THIN_OUTER_THICK [Simple 2x2] 1`] = `
[
  "┏━━━━━━━━━━━━┯━━━━━━━━━━━━┯━━━━━━━━━━━━━┯━━━━━━━━━━━━┓",
  "┃  Column 1  │  Column 2  │  Column 3A  │  Column 4  ┃",
  "┠────────────┼────────────┼─────────────┼────────────┨",
  "┃  Left      │    Ctr     │     Ctr     │     Right  ┃",
  "┠────────────┼────────────┼─────────────┼────────────┨",
  "┃  Left 1    │    Ctr2    │    Ctr3     │   Right 4  ┃",
  "┗━━━━━━━━━━━━┷━━━━━━━━━━━━┷━━━━━━━━━━━━━┷━━━━━━━━━━━━┛",
]
`;

exports[`Align(0,LEFT),Align(1,CENTER),Align(2,RIGHT) THICK [Simple 2x2] 1`] = `
[
  "┏━━━━━━━━━━━━┳━━━━━━━━━━━━┳━━━━━━━━━━━━━┳━━━━━━━━━━━━┓",
  "┃  Column 1  ┃  Column 2  ┃  Column 3A  ┃  Column 4  ┃",
  "┣━━━━━━━━━━━━╋━━━━━━━━━━━━╋━━━━━━━━━━━━━╋━━━━━━━━━━━━┫",
  "┃  Left      ┃    Ctr     ┃     Ctr     ┃     Right  ┃",
  "┣━━━━━━━━━━━━╋━━━━━━━━━━━━╋━━━━━━━━━━━━━╋━━━━━━━━━━━━┫",
  "┃  Left 1    ┃    Ctr2    ┃    Ctr3     ┃   Right 4  ┃",
  "┗━━━━━━━━━━━━┻━━━━━━━━━━━━┻━━━━━━━━━━━━━┻━━━━━━━━━━━━┛",
]
`;

exports[`Align(0,LEFT),Align(1,CENTER),Align(2,RIGHT) THIN [Simple 2x2] 1`] = `
[
  "┌────────────┬────────────┬─────────────┬────────────┐",
  "│  Column 1  │  Column 2  │  Column 3A  │  Column 4  │",
  "├────────────┼────────────┼─────────────┼────────────┤",
  "│  Left      │    Ctr     │     Ctr     │     Right  │",
  "├────────────┼────────────┼─────────────┼────────────┤",
  "│  Left 1    │    Ctr2    │    Ctr3     │   Right 4  │",
  "└────────────┴────────────┴─────────────┴────────────┘",
]
`;

exports[`Align(0,LEFT),Align(1,CENTER),Align(2,RIGHT) THINCURVE [Simple 2x2] 1`] = `
[
  "╭────────────┬────────────┬─────────────┬────────────╮",
  "│  Column 1  │  Column 2  │  Column 3A  │  Column 4  │",
  "├────────────┼────────────┼─────────────┼────────────┤",
  "│  Left      │    Ctr     │     Ctr     │     Right  │",
  "├────────────┼────────────┼─────────────┼────────────┤",
  "│  Left 1    │    Ctr2    │    Ctr3     │   Right 4  │",
  "╰────────────┴────────────┴─────────────┴────────────╯",
]
`;

exports[`Align(0,LEFT),Align(1,CENTER),Align(2,RIGHT) VERTICALBAR_PLUS_EQUALS [Simple 2x2] 1`] = `
[
  "+============+============+=============+============+",
  "|  Column 1  |  Column 2  |  Column 3A  |  Column 4  |",
  "+============+============+=============+============+",
  "|  Left      |    Ctr     |     Ctr     |     Right  |",
  "+============+============+=============+============+",
  "|  Left 1    |    Ctr2    |    Ctr3     |   Right 4  |",
  "+============+============+=============+============+",
]
`;

exports[`Align(0,LEFT),Align(1,CENTER),Align(2,RIGHT) VERTICALBAR_PLUS_MINUS [Simple 2x2] 1`] = `
[
  "+------------+------------+-------------+------------+",
  "|  Column 1  |  Column 2  |  Column 3A  |  Column 4  |",
  "+------------+------------+-------------+------------+",
  "|  Left      |    Ctr     |     Ctr     |     Right  |",
  "+------------+------------+-------------+------------+",
  "|  Left 1    |    Ctr2    |    Ctr3     |   Right 4  |",
  "+------------+------------+-------------+------------+",
]
`;

exports[`Align(0,LEFT),Align(1,CENTER),Align(2,RIGHT) VERTICALBAR_PLUS_MINUS_SLASHES [Simple 2x2] 1`] = `
[
  "/------------+------------+-------------+------------\\",
  "|  Column 1  |  Column 2  |  Column 3A  |  Column 4  |",
  "+------------+------------+-------------+------------+",
  "|  Left      |    Ctr     |     Ctr     |     Right  |",
  "+------------+------------+-------------+------------+",
  "|  Left 1    |    Ctr2    |    Ctr3     |   Right 4  |",
  "\\------------+------------+-------------+------------/",
]
`;
